--- a/LogReader-WPF/LogReader-WPF.csproj
+++ b/LogReader-WPF/LogReader-WPF.csproj
@@ -6,8 +6,8 @@
     <RootNamespace>LogReader_WPF</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>1.2223</AssemblyVersion>
-    <FileVersion>.22223</FileVersion>
+    <AssemblyVersion>0.22.03.04</AssemblyVersion>
+    <FileVersion>0.22.03.04</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
