Created new function for Searching Menu, change how I was reading the file, cleaning out the search box, and searching not based off case.

--- a/LogReader-WPF/AppSettings/AppSettings.json
+++ b/LogReader-WPF/AppSettings/AppSettings.json
@@ -10,7 +10,7 @@
       "ErrorColor": "Yellow"
     },
     {
-      "ErrorName": "asd",
+      "ErrorName": "Started",
       "ErrorColor": "Green"
     }
   ]
