Trying to fix format and code after I am all done. hehe

--- a/LogReader-WPF/AppSettings/AppSettings.json
+++ b/LogReader-WPF/AppSettings/AppSettings.json
@@ -1,7 +1,10 @@
 {
- 
-  "FontSize": 21,
-  
+
+  "Settings": {
+    "FontSize": 21,
+    "HistoryFilename": "History.txt"
+  },
+
 
   "errorColors": [
     {
